tests/NormalTests/paczka1/small_fuzzy/63410599.err
Error in line 3: etl9CNuW42 S63 -1,1
Error in line 4: A311 A458 38,6
Error in line 1: etl9CNuW42 S63 90,9
Error in line 10: etl9CNuW42 S24 24,5
